<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <!-- For some reason the constraint layout is half of the screen and I literally cant figure out why or how to fix this, I can try to tackle this later -->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="113dp"
            android:paddingBottom="32dp"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/task_name"
            android:layout_width="341dp"
            android:layout_height="38dp"
            android:layout_marginTop="28dp"
            android:hint="@string/task_name"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/task_points"
            android:layout_width="340dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:hint="@string/point_value"
            android:inputType="number"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_name" />

        <Switch
            android:id="@+id/photo_required"
            android:layout_width="322dp"
            android:layout_height="23dp"
            android:text="@string/photo_required_to_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_points"
            app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/Urgency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Urgency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_required" />

        <!-- Add RadioGroup with 3 RadioButtons -->
        <RadioGroup
            android:id="@+id/urgency_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Urgency">

            <RadioButton
                android:id="@+id/urgency_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Low" />

            <RadioButton
                android:id="@+id/urgency_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medium" />

            <RadioButton
                android:id="@+id/urgency_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/High" />
        </RadioGroup>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/urgency_radio_group"
            app:layout_constraintBottom_toTopOf="@+id/save_task_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Save Task button at the bottom -->
        <Button
            android:id="@+id/save_task_button"
            android:layout_width="352dp"
            android:layout_height="46dp"
            android:text="@string/save_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.296"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>